engine: Fix table rending on mobile (#715)
* Fix table size

* Apply only to mobile devices

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -144,9 +144,12 @@ div .admonition-content > ul > li > a {
   margin-top: 0;
 }
 
-table {
-  display: table;
-  width: 100%;
+@media screen and (max-width: 966px)  {
+  table{
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
+  }
 }
 
 table tr td {
